--- a/server-core/pom.xml
+++ b/server-core/pom.xml
@@ -18,6 +18,16 @@
 		</plugins>
 	</build>
 	<dependencies>
+	
+
+	
+		<dependency>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>4.13</version>
+		  <scope>test</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>io.onedev</groupId>
 			<artifactId>commons-launcher-loader</artifactId>
